--- a/app/src/main/res/layout/activity_doctor_login.xml
+++ b/app/src/main/res/layout/activity_doctor_login.xml
@@ -15,28 +15,33 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
         <ImageView
-            android:id="@+id/login_back_button"
+            android:id="@+id/applogo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:src="@drawable/general_back_icon" />
+            android:layout_height="150dp"
+            android:layout_marginTop="60dp"
+            android:layout_gravity="center"
+            android:src="@drawable/app_logo" />
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/muli_black"
             android:gravity="center"
-            android:text="@string/drlogin"
+            android:text="Mediplus login"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="40sp" />
+            android:textSize="30sp" />
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp">
+            android:layout_marginTop="30dp">
 
             <com.leo.simplearcloader.SimpleArcLoader
                 android:visibility="invisible"
