--- a/app/src/main/res/layout/activity_patient_dash.xml
+++ b/app/src/main/res/layout/activity_patient_dash.xml
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:background="@color/teal_700">
+            android:background="@drawable/card_1"
+            android:elevation="8dp">
 
 
             <ImageView
