--- a/app/src/main/res/layout/fragment_patient_dashboard.xml
+++ b/app/src/main/res/layout/fragment_patient_dashboard.xml
@@ -23,15 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
 
-            <TextView
-                android:fontFamily="@font/muli_black"
-                android:id="@+id/app_name"
-                android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/logo_name"
-                android:textColor="@color/black"
-                android:textSize="28sp" />
+
 
             </RelativeLayout>
         </LinearLayout>
@@ -45,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -304,16 +297,12 @@
 
 
 
-    <HorizontalScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="5dp">
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -437,7 +426,7 @@
 
         </LinearLayout>
 
-    </HorizontalScrollView>
+
 
 
 
